[workspace]
resolver = "1"
members = [
    "generate-readme",
    "nvidia-migmanager",
]

[workspace.dependencies]
generate-readme = { version = "0.1", path = "generate-readme" }

argh = "0.1"
base64 = "0.22"
cargo-readme = "3"
log = "0.4.21"
regex = "1"
serde = "1"
serde_plain = "1"
simplelog = "0.12"
snafu = "0.8"
tempfile = "3"
toml = "0.8"

[profile.release]
debug = true
